--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
     
 <!-- Linking in JQuery -->
-<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <!-- Linking in JS file from assets folder -->
 <script src="./assets/javascript/game.js"></script>
 
